--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 	<p>velaki tinu,velaki padko,mandulu sarigga veskoo.<p>
 	<p>Vuntamari Jagratha............</p>
 	<h3 Style = "color:Red;"><b>Itlu ne priyathi priyamaina....</b></h3>
+	<img src = "https://abdv17.github.io/lekha.github.io/" alt = "nana">
 </body>
 </html>
