--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 	<p>velaki tinu,velaki padko,mandulu sarigga veskoo.<p>
 	<p>Vuntamari Jagratha............</p>
 	<h3 Style = "color:Red;"><b>Itlu ne priyathi priyamaina....</b></h3>
-	<img src = "https://abdv17.github.io/lekha.github.io/" alt = "nana">
+	<img src = "https://github.com/abdv17/lekha.github.io/blob/master/WhatsApp%20Image%202016-11-10%20at%2023.11.47.jpeg" alt = "nana">
 </body>
 </html>
