--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 	<h2 style = "color:Green;">Hi Bujji How are you? Welcome to my Website!!</h2>
-	
+	<h3>Mummy, Daddy ela vunnaru?</h3>
+	<h3>Nani em chestunnadu?</h3>
 	
 </body>
 </html>
