add tree diagram
add tree diagram

--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <script type='text/javascript' src='https://www.google.com/jsapi'></script>  
+   <script type='text/javascript'>  
+    google.load('visualization', '1', {packages:['orgchart']});  
+    google.setOnLoadCallback(drawChart);  
+    function drawChart() {  
+     var data = new google.visualization.DataTable();  
+     data.addColumn('string', 'Node');  
+     data.addColumn('string', 'Parent');  
+     data.addRows([  
+      ['1', ''],  
+      ['1.1', '1'],  
+      ['1.2', '1'],  
+      ['1.1.1', '1.1'],  
+      ['1.1.2', '1.1'],  
+      ['1.1.3', '1.1'],  
+      ['1.2.1', '1.2'],  
+      ['1.2.2', '1.2'],  
+      ['1.1.1.1', '1.1.1'],  
+      ['1.1.1.2', '1.1.1'],  
+      ['1.1.3.1', '1.1.3'],  
+      ['1.2.2.1', '1.2.2'],  
+      ['1.2.2.2', '1.2.2']  
+     ]);  
+     var chart = new google.visualization.OrgChart(document.getElementById('chart_div'));  
+     chart.draw(data);
+</script>
   </head>
   <body>
     <section class="page-header">
@@ -17,10 +43,10 @@
 
     <section class="main-content">
       <h1>
-<a id="will-discuss-about-my-family-here" class="anchor" href="#will-discuss-about-my-family-here" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Will discuss about my family here</h1>
-
-<p>Will explain each and every one in my family.Their personality traits.What they mean to me..</p>
-
+      <a id="will-discuss-about-my-family-here" class="anchor" href="#will-discuss-about-my-family-here" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Will discuss about my family here</h1>
+       
+       <p>Will explain each and every one in my family.Their personality traits.What they mean to me..</p>
+       <div id='chart_div'></div>
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/abdv17/Wish.github.io">Gaddam&#39;s Family</a> is maintained by <a href="https://github.com/abdv17">abdv17</a>.</span>
         
