--- a/index.html
+++ b/index.html
@@ -8,32 +8,34 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    <script type='text/javascript' src='https://www.google.com/jsapi'></script>  
-   <script type='text/javascript'>  
-    google.load('visualization', '1', {packages:['orgchart']});  
-    google.setOnLoadCallback(drawChart);  
-    function drawChart() {  
-     var data = new google.visualization.DataTable();  
-     data.addColumn('string', 'Node');  
-     data.addColumn('string', 'Parent');  
-     data.addRows([  
-      ['1', ''],  
-      ['1.1', '1'],  
-      ['1.2', '1'],  
-      ['1.1.1', '1.1'],  
-      ['1.1.2', '1.1'],  
-      ['1.1.3', '1.1'],  
-      ['1.2.1', '1.2'],  
-      ['1.2.2', '1.2'],  
-      ['1.1.1.1', '1.1.1'],  
-      ['1.1.1.2', '1.1.1'],  
-      ['1.1.3.1', '1.1.3'],  
-      ['1.2.2.1', '1.2.2'],  
-      ['1.2.2.2', '1.2.2']  
-     ]);  
-     var chart = new google.visualization.OrgChart(document.getElementById('chart_div'));  
-     chart.draw(data);
-</script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+      google.charts.load('current', {packages:["orgchart"]});
+      google.charts.setOnLoadCallback(drawChart);
+
+      function drawChart() {
+        var data = new google.visualization.DataTable();
+        data.addColumn('string', 'Name');
+        data.addColumn('string', 'Manager');
+        data.addColumn('string', 'ToolTip');
+
+        // For each orgchart box, provide the name, manager, and tooltip to show.
+        data.addRows([
+          [{v:'Mike', f:'Mike<div style="color:red; font-style:italic">President</div>'},
+           '', 'The President'],
+          [{v:'Jim', f:'Jim<div style="color:red; font-style:italic">Vice President</div>'},
+           'Mike', 'VP'],
+          ['Alice', 'Mike', ''],
+          ['Bob', 'Jim', 'Bob Sponge'],
+          ['Carol', 'Bob', '']
+        ]);
+
+        // Create the chart.
+        var chart = new google.visualization.OrgChart(document.getElementById('chart_div'));
+        // Draw the chart, setting the allowHtml option to true for the tooltips.
+        chart.draw(data, {allowHtml:true});
+      }
+   </script>
   </head>
   <body>
     <section class="page-header">
