--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
     <script type="text/javascript">
       google.charts.load('current', {packages:["orgchart"]});
       google.charts.setOnLoadCallback(drawChart);
-
       function drawChart() {
         var data = new google.visualization.DataTable();
         data.addColumn('string', 'Name');
         data.addColumn('string', 'Manager');
         data.addColumn('string', 'ToolTip');
-
         // For each orgchart box, provide the name, manager, and tooltip to show.
         data.addRows([
-          [{v:'Mike', f:'Mike<div style="color:red; font-style:italic">President</div>'},
+          [{v:'Tirupathaiyya,Chennamma', f:'Tirupathaiyya,Chennamma<div style="color:red; font-style:italic">Jejiya,Jeji</div>'},
            '', 'The President'],
-          [{v:'Jim', f:'Jim<div style="color:red; font-style:italic">Vice President</div>'},
-           'Mike', 'VP'],
-          ['Alice', 'Mike', ''],
-          ['Bob', 'Jim', 'Bob Sponge'],
-          ['Carol', 'Bob', '']
+          [{v:'Prasad,Chennamma', f:'Prasad,Chennamma<div style="color:red; font-style:italic">Pedanana,Pedamma</div>'},
+           'Tirupathaiyya,Chennamma', 'Pedanana,Pedamma'],
+		  [{v:'Lakshmi Narayana,Venkata Narayanamma', f:'Lakshmi Narayana,Venkata Narayanamma<div style="color:red; font-style:italic">Daddy,Mummy</div>'},
+           'Tirupathaiyya,Chennamma', 'Daddy,Mummy'],
+		  [{v:'Venkateswarlu,Indiramma', f:'Venkateswarlu,Indiramma<div style="color:red; font-style:italic">NLR Babai,Indira Pinni</div>'},
+           'Tirupathaiyya,Chennamma', 'NLR babai,,Indira Pinni'],
+		  [{v:'Rajendra,Satyavathi', f:'Rajendra,Satyavathi<div style="color:red; font-style:italic">Raja babai,Satyavathi Pinni</div>'},
+           'Tirupathaiyya,Chennamma', 'Raja Babai,Satyavathi Pinni'],
         ]);
-
         // Create the chart.
         var chart = new google.visualization.OrgChart(document.getElementById('chart_div'));
         // Draw the chart, setting the allowHtml option to true for the tooltips.
