added new entries into tree
added new entries into tree

--- a/index.html
+++ b/index.html
@@ -29,6 +29,27 @@
            'Tirupathaiyya,Chennamma', 'NLR babai,,Indira Pinni'],
 		  [{v:'Rajendra,Satyavathi', f:'Rajendra,Satyavathi<div style="color:red; font-style:italic">Raja babai,Satyavathi Pinni</div>'},
            'Tirupathaiyya,Chennamma', 'Raja Babai,Satyavathi Pinni'],
+		   
+		  [{v:'Venu Gopal,Manoji', f:'Venu,Manoji<div style="color:red; font-style:italic">Venu Annaya,Vadina</div>'},
+           'Prasad,Chennamma', 'Venu Annaya,Vadina'],
+		  [{v:'Narayana,China Narayana', f:'Narayana,China Narayana<div style="color:red; font-style:italic">Narayanakka,Mavayya</div>'},
+           'Prasad,Chennamma', 'Narayanakka,Mavayya'],
+		  [{v:'Padma,Naveen', f:'Padma,Naveen<div style="color:red; font-style:italic">Padmakka,Naveen Bava</div>'},
+           'Prasad,Chennamma', 'Padmakka,Naveen Bava'],
+		  [{v:'Mohan', f:'Mohan<div style="color:red; font-style:italic">Chinnodu</div>'},
+           'Prasad,Chennamma', 'Chinnodu'],
+		  [{v:'Sai Kumar', f:'Sai Kumar<div style="color:red; font-style:italic">Me</div>'},
+           'Lakshmi Narayana,Venkata Narayanamma', 'Me'],
+		  [{v:'Jyothsna,Mahesh', f:'Jyothsna,Mahesh<div style="color:red; font-style:italic">Bujji,Nani</div>'},
+           'Lakshmi Narayana,Venkata Narayanamma', 'Bujji,Nani'],
+		  [{v:'Pavan Kumar,Prasanna', f:'Pavan Kumar,Prasanna<div style="color:red; font-style:italic">Pavan Anna,Vadina</div>'},
+           'Venkateswarlu,Indiramma', 'Pavan Anna,Vadina'],
+		  [{v:'Varun', f:'Varun<div style="color:red; font-style:italic">Varun Anna</div>'},
+           'Venkateswarlu,Indiramma', 'Varun Anna'],
+		  [{v:'Prasanna', f:'Prasanna<div style="color:red; font-style:italic">Prasanna</div>'},
+           'Rajendra,Satyavathi', 'Prasanna'],
+		  [{v:'Gowtham', f:'Gowtham<div style="color:red; font-style:italic">Gowtham</div>'},
+           'Rajendra,Satyavathi', 'Gowtham'],
         ]);
         // Create the chart.
         var chart = new google.visualization.OrgChart(document.getElementById('chart_div'));
