Change of project tagline
Change of project tagline

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Gaddam&#39;s Family</h1>
-      <h2 class="project-tagline">My Family</h2>
+      <h2 class="project-tagline">Be Kind to One another</h2>
     </section>
 
     <section class="main-content">
