--- a/index.html
+++ b/index.html
@@ -22,21 +22,6 @@
           [{v:'Tirupathaiyya,Chennamma', f:'Tirupathaiyya,Chennamma<div style="color:red; font-style:italic"><button onclick="JejiyaJeji()" type="button" style="color:Red";>Jejiya,Jeji</button></div>'},
            '', 'The President'],
           [{v:'Prasad,Chennamma', f:'Prasad,Chennamma<div style="color:red; font-style:italic"><button onclick="PedananaPedamma()" type="button" style="color:Red";>Pedanana,Pedamma</button></div>'},
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript">
-      google.charts.load('current', {packages:["orgchart"]});
-      google.charts.setOnLoadCallback(drawChart);
-      function drawChart() {
-        var data = new google.visualization.DataTable();
-        data.addColumn('string', 'Name');
-        data.addColumn('string', 'Manager');
-        data.addColumn('string', 'ToolTip');
-        // For each orgchart box, provide the name, manager, and tooltip to show.
-        data.addRows([
-		data.addRows([
-          [{v:'Tirupathaiyya,Chennamma', f:'Tirupathaiyya,Chennamma<div style="color:red; font-style:italic"><button onclick="JejiyaJeji()" type="button" style="color:Red";>Jejiya,Jeji</button></div>'},
-           '', 'The President'],
-          [{v:'Prasad,Chennamma', f:'Prasad,Chennamma<div style="color:red; font-style:italic"><button onclick="PedananaPedamma()" type="button" style="color:Red";>Pedanana,Pedamma</button></div>'},
            'Tirupathaiyya,Chennamma', 'Pedanana,Pedamma'],
 		  [{v:'Lakshmi Narayana,Venkata Narayanamma', f:'Lakshmi Narayana,Venkata Narayanamma<div style="color:red; font-style:italic"><button onclick="DaddyMummy()" type="button" style="color:Red";>Daddy,Mummy</button></div>'},
            'Tirupathaiyya,Chennamma', 'Daddy,Mummy'],
@@ -76,14 +61,14 @@
 		document.getElementById("demo1").innerHTML = "Jeji:: First person to come into our family.No facilities,no plenty of income,hard to imagine how she brought up her 5 children.She is tall,strong both mental and physical.Still walks a kilometre daily to serve a hand in agriculture.Heard that there are few rifts with jejiya in early marriage life(May be because of jejiya temper!).Learned a lot in her 60 years of marriage life.During my last visit to her,she made me a lemon juice which is no ordinary cause,never had one in my 24 years of life.";
 		}
 		function PedananaPedamma() {
-		document.getElementById("demo").innerHTML = "Pedanana:: I grew up by looking at Pedanana as a Very strong and stubborn person.Later on with more interaction with him, found that he is very soft, delicate inside. Just like a coconut. He is the arguably best farmer that my family produced ever.Man with a enormous amounts of patience.Travels very frequently between Maharashtra and TKG Padu.Always says to me earn quite enough money so that can help one.Afraid of taking impacting decisions and seldom comes late with a perfect decision.";
+		document.getElementById("demo").innerHTML = "Pedanana:: I grew up by looking at Pedanana as a Very strong and stubborn person.Later on with more interaction with him,I found that he is very soft,delicate inside.Just like a coconut.He is the arguably best farmer that my family produced ever.Man with a enormous amounts of patience.Travels very frequently between Maharashtra and TKG Padu.Always says to me earn quite enough money so that can help one.Afraid of taking impacting decisions and seldom comes late with a perfect decision.";
 		
 		
-		document.getElementById("demo1").innerHTML = "Pedamma:: First person to come into Gaddam's family after Jeji. Quite interesting both are having same name. Bad with cooking few specific dishes and frankly agrees to the fact that she is not best cook in the family. Liked that frankness. Her husband and children are her world. She dont know anything except cooking, washing, praying god.";
+		document.getElementById("demo1").innerHTML = "Pedamma:: First person to come into Gaddam's family after Jeji.Quite interesting both are having same name.Bad with cooking few specific dishes and frankly agrees to the fact that she is not best cook in the family.Liked that frankness.Her husband and children are her family.She dont know anything except cooking,washing,praying god.";
 		}
 		function DaddyMummy() {
-		document.getElementById("demo").innerHTML = "Daddy:: Probably,first person to realise the importance of education.Arguably favorite child of Jejiya.Hard work at the max doesnt matter whether it is agriculture or education.Always repents that he lacks in guidance , a direction, a planning.Genuinity is at its best with him.Outstanding memory power,may be it is the reason for completion of his education despite the time he got.Always ready to help his friends/colleagues.Found a funny side when he blames mummy and her family for his health condition.He is the best person who can convince Jejiya on a point.He is second quick person in reacting for a situation.Involves in lot of decisioning situations.";
-		document.getElementById("demo1").innerHTML = "Mummy:: She is a person to come from a well lived family. Struggled a bit to adjust to the family. Slowly emerged as a capable hand in dealing many situations like marriages, functions. Her endurance is the best of anyone. She had her own reasons for not being very generous. Got a tag for that, that she is not a very broad mind or very welcoming to the people who visits. She is much disciplined, agile, likes self-respect. Kids can be left at her care without a doubt.";
+		document.getElementById("demo").innerHTML = "WIP: 2 Paras should come about Daddy and Mummy";
+		document.getElementById("demo1").innerHTML = "WIP: 2 Paras should come about Daddy and Mummy"
 		}
 		function NLRbabaipinni() {
 		document.getElementById("demo").innerHTML = "WIP: 2 Paras should come about NLR Babai and Indira Pinni";
