added desc of daddy and mummy
added desc of daddy and mummy

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 		document.getElementById("demo1").innerHTML = "Pedamma:: First person to come into Gaddam's family after Jeji.Quite interesting both are having same name.Bad with cooking few specific dishes and frankly agrees to the fact that she is not best cook in the family.Liked that frankness.Her husband and children are her family.She dont know anything except cooking,washing,praying god.";
 		}
 		function DaddyMummy() {
-		document.getElementById("demo").innerHTML = "WIP: 2 Paras should come about Daddy and Mummy";
-		document.getElementById("demo1").innerHTML = "WIP: 2 Paras should come about Daddy and Mummy"
+		document.getElementById("demo").innerHTML = "Daddy:: Probably, first person to realise the importance of education. Arguably favorite child of Jejiya. Hard work at the max doesnt matter whether it is agriculture or education. Always repents that he lacks in guidance , a direction, a planning. Genuinity is at its best with him.Doesn't like lying and cheating. Outstanding memory power, may be it is the reason for completion of his education despite the time he got. Always ready to help his friends/colleagues. Found a funny side when he blames mummy and her family for his health condition. He is the best person who can convince Jejiya on a point. He is second quick person in reacting for a situation.Involves in lot of decisioning situations.";
+		document.getElementById("demo1").innerHTML = "Mummy:: She is a person to come from a well lived family. Struggled a bit to adjust to the family. Slowly emerged as a capable hand in dealing many situations like marriages, functions. Her endurance is the best of anyone. She had her own reasons for not being very generous. Got a tag for that, that she is not a very broad mind or very welcoming to the people who visits. She is much disciplined, agile, likes self-respect. Kids can be left at her care without a doubt.";
 		}
 		function NLRbabaipinni() {
 		document.getElementById("demo").innerHTML = "WIP: 2 Paras should come about NLR Babai and Indira Pinni";
