add nlr pinni,raja babai,satya pinni
add nlr pinni,raja babai,satya pinni

--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
 		}
 		function NLRbabaipinni() {
 		document.getElementById("demo").innerHTML = "NLR Babai:: Probably favorite child of Jeji. He wants to be perfect at his work and he is. He is having amazing social skills his friends circle is a proof of that. Despite struggles during early stages of his post marriage life, brought his family into a good shape. He loves to be clean, precise, accurate, and neat. Babai, likes to discuss with his brothers before taking a huge decisions. Discussed a lot with me while buying his car.  Having a good skill at cooking. Suggestion seeking may delay decision making. So, rarely comes short of a decision.";
-		document.getElementById("demo1").innerHTML = "WIP: 2 Paras should come about NLR Babai and Indira Pinni";
+		document.getElementById("demo1").innerHTML = "Indira Pinni:: When a situation arises, it’s easy to make her panic/worry/tense. Poor Pinni, always there is a health issue for her. Prays a lot to god. In fact, her praying is equal to all of us praying. Always ready to go to temple distance doesn’t matters. Struggled a lot with Babai and always there for him when a supporting hand needed.";
 		}
 		function Rajababaipinni() {
-		document.getElementById("demo").innerHTML = "WIP: 2 Paras should come about Raja Babai and Satyavathi Pinni";
-		document.getElementById("demo1").innerHTML = "WIP: 2 Paras should come about Raja Babai and Satyavathi Pinni";
+		document.getElementById("demo").innerHTML = "Raja Babai:: Babai is the youngest of four brothers. Babai is the second most feared person after my Daddy. He grew up by taking all the guidance, suggestions from his elder brothers. I saw a great leader and manager in him. Saw lot of those situations where he managed/handled them quite well. He is the quickest of all to react to a situation. Good with humor bad with temper. Praising is his repertoire.";
+		document.getElementById("demo1").innerHTML = "Satyavathi Pinni:: She is a capable person in handling the situations and family simultaneously. She finds herself more effective in agriculture. Best female in the house in terms of agriculture work. Always like to know the trend of a market and keeps up to date. Likes to do shopping often.";
 		}
 		function VenuAnnaVadina() {
 		document.getElementById("demo").innerHTML = "WIP: 2 Paras should come about Venu Annaya and Vadina";
