--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <h1>
       <a id="will-discuss-about-my-family-here" class="anchor" href="#will-discuss-about-my-family-here" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Will discuss about my family here</h1>
        
-       <p>Will explain each and every one in my family.Their personality traits.What they mean to me..</p>
+       <p>Will explain each and every one in my family.Their personality traits.What they mean to me..To know more click on the buttons below.</p>
        </section>
        <div id='chart_div'></div>
 	<section class="main-content">
