add label to tier 3
add label to tier 3

--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
 		document.getElementById("demo1").innerHTML = "Satyavathi Pinni:: She is a capable person in handling the situations and family simultaneously. She finds herself more effective in agriculture. Best female in the house in terms of agriculture work. Always like to know the trend of a market and keeps up to date. Likes to do shopping often.";
 		}
 		function VenuAnnaVadina() {
-		document.getElementById("demo").innerHTML = "He is a guy which amazing talent at academics and let it come will see/will work attitude. Quite astonishing to see both in a same person. He is very good at studies and got a masters from IIT one of the best colleges in India. He is balayya hardcore fan. A cool head never reacts to situation in haste.";
-		document.getElementById("demo1").innerHTML = "It is hard to keep secrets with her. She is make a slow and steady progress as a housewife who can lead family and struggles/problems simultaneously. Hard to convince her in a first attempt or make her OK for a thing in first time.";
+		document.getElementById("demo").innerHTML = "Venu Annaya:: He is a guy which amazing talent at academics and let it come will see/will work attitude. Quite astonishing to see both in a same person. He is very good at studies and got a masters from IIT one of the best colleges in India. He is balayya hardcore fan. A cool head never reacts to situation in haste.";
+		document.getElementById("demo1").innerHTML = "Vadina:: It is hard to keep secrets with her. She is make a slow and steady progress as a housewife who can lead family and struggles/problems simultaneously. Hard to convince her in a first attempt or make her OK for a thing in first time.";
 		}
 		function Narayana() {
-		document.getElementById("demo").innerHTML = "Amazing transformation from a girl who played with during her childhood to a housewife leading a joint family successfully. Capable and trustable hand can assign a work to her without a doubt. Found a soothing hand at her always tends me as if I am her own brother. Always Cool, Calm, Smiling.";
-		document.getElementById("demo1").innerHTML = "He is a perfect craftsman. Knows many things and sorts mostly all problems in and around the house. Very good with people and maintains the healthy relationships. Well educated, cool head. Never saw him loose temper, almost rare.";
+		document.getElementById("demo").innerHTML = "Narayanakka:: Amazing transformation from a girl who played with during her childhood to a housewife leading a joint family successfully. Capable and trustable hand can assign a work to her without a doubt. Found a soothing hand at her always tends me as if I am her own brother. Always Cool, Calm, Smiling.";
+		document.getElementById("demo1").innerHTML = "Narayana Mavayya:: He is a perfect craftsman. Knows many things and sorts mostly all problems in and around the house. Very good with people and maintains the healthy relationships. Well educated, cool head. Never saw him loose temper, almost rare.";
 		}
 		function PadmaNaveen() {
-		document.getElementById("demo").innerHTML = "She is almost same as Narayanakka. Safe to say both are photocopies in dealing situations, handling pressure and problems. She is much faster than her elder sister and agile. One of the think tank of the family where helps family members with her suggestions on a problem.";
-		document.getElementById("demo1").innerHTML = "He came to our family from a very well lived family with a decent background. He is quite capable person in handling multiple roles and responsibilities. He proved it many times by maintaining healthy relationship with family and leading successful career in teaching and agriculture.";
+		document.getElementById("demo").innerHTML = "Padmakka:: She is almost same as Narayanakka. Safe to say both are photocopies in dealing situations, handling pressure and problems. She is much faster than her elder sister and agile. One of the think tank of the family where helps family members with her suggestions on a problem.";
+		document.getElementById("demo1").innerHTML = "Naveen Bava:: He came to our family from a very well lived family with a decent background. He is quite capable person in handling multiple roles and responsibilities. He proved it many times by maintaining healthy relationship with family and leading successful career in teaching and agriculture.";
 		}
 		function Mohan() {
-		document.getElementById("demo").innerHTML = "He is my go to man when he is in the house. Knows many things on how to do it. Able to do many things like agriculture, cooking… Giving injections :P";
+		document.getElementById("demo").innerHTML = "Mohan:: He is my go to man when he is in the house. Knows many things on how to do it. Able to do many things like agriculture, cooking… Giving injections :P";
 		document.getElementById("demo1").innerHTML = "";
 		}
 		function Me() {
