tier 3 add of daddy branch
tier 3 add of daddy branch

--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
 		document.getElementById("demo1").innerHTML = "";
 		}
 		function Me() {
-		document.getElementById("demo").innerHTML = "WIP: 1 Para should come about Sai Kumar";
+		document.getElementById("demo").innerHTML = "Me:: He is a man who expects more result from less hard work and more smart work. Always finds an alternative to work, ends up with incompletion of the work and no alternative: P. Not so capable of holding out the temper or any other emotion. Always changing focus from one thing to other. Not so great will power. Comes up with a better solution to a problem. But, always late.";
 		document.getElementById("demo1").innerHTML = "";
 		}
 		function BujjiNani() {
-		document.getElementById("demo").innerHTML = "WIP: 2 Paras should come about Bujji and Nani";
-		document.getElementById("demo1").innerHTML = "WIP: 2 Paras should come about Bujji and Nani";
+		document.getElementById("demo").innerHTML = "Bujji:: She never resists herself in asking something to her mom n dad. She is under an impression under a feeling like I am good person all around me are good persons. She cant catch a point at first attempt, slow at doing things. Despite slow, will complete all the household activities with precision. Won’t involve in debates at all.";
+		document.getElementById("demo1").innerHTML = "Nani:: He is 100% supportive to Bujji. Knows many things and talks about them given a chance. Have enough patience to explain things to Bujji.";
 		}
 		function PavanPrasanna() {
 		document.getElementById("demo").innerHTML = "WIP: 2 Paras should come about PavanAnna and PrasannaVadina";
